# HPnetworks

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  clique.h  cluster.h  connected.cpp  connected.h  function.cpp  function.h
src/DiGraph/: DiGraph.cpp  DiGraph.h
src/Graph/: Graph.cpp  Graph.h
src/algorithms/operators/: product.cpp  product.h
src/generators/: classic.cpp  classic.h  lattice.h
src/isomorphism/: isomorph.cpp  isomorph.h
src/operators/: unary.cpp  unary.h
src/types/: EdgeView.cpp  EdgeView.h  EdgeViewWithData.cpp  EdgeViewWithData.h  NodeView.cpp  NodeView.h  NodeViewWithData.cpp  NodeViewWithData.h  typedefs.h
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  itertools.h  test_generators_classic.cpp  test_graphs.cpp  utils.cpp  utils.h
